# poe2-hideout-art

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DECO_CATALOG.md  INSTALL.md  LICENSE  PATTERNS.md  README.md  SECURITY.md  STATUS.md  pyproject.toml  worklog.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_hash.md
.github/workflows/: ci.yml
deliverable/: чистый холст с примитивами.hideout
docs/: format.md  img2hideout.md  mosaic_recipe.md
download/: analysis_full.json  clean_v0.5.0.hideout  heart.hideout  heart_v062.hideout  img2hideout_report.txt  img2hideout_report_v062.txt  per_type_stats.json  poe2_refs_analysis.json  portrait.hideout  portrait_v062.hideout  spatial_stats.json  чистый холст clean.hideout  чистый холст с примитивами.hideout  чистый холст.hideout
examples/: README.md  palette.json  palette_2b.json  palette_canal_bright.json  palette_canal_warm.json  palette_warm.json
scripts/: README.md  analyze_all.py  bulk_preview.py  draw_primitives.py  gen_test_images.py  measure_decorations.py  parse_hideout.py  per_type_grid.py  per_type_stats.py  plot_hideouts.py  render_primitives_preview.py  run_img2hideout_test.py  sample_all.py  sample_pixels.py  scrape_hashes.py  spatial_stats.py
tests/: test_footprints.py  test_img2hideout.py  test_new_hashes.py  test_parser.py  test_primitives.py  test_sample_pixels.py  test_transforms.py  test_writer.py
исходники/: Кордилой обозначил условные границы полотна а окаменевшей фигурой из пещер --- условный центр плюс-минус.hideout  водоросли и летающий песок.hideout  всякое.hideout  галька.hideout  еще камни и растения.hideout  еще элементы.hideout  камни и кустарники.hideout  укрошения, хорошие подложки будто и обломки.hideout
(+12 files in other folders)
